jira_clone/force-app/main/default/objects/Report_Detail__c/Report_Detail__c.object-meta.xml
<CustomObject>
    <description>Stores presentation details for a Salesforce report (image, description, report reference)</description>
    <label>Report Detail</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Report Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>