jira_clone/force-app/main/default/objects/Report_Detail__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Report description</description>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>