jira_clone/force-app/main/default/objects/Report_Detail__c/fields/Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Image_URL__c</fullName>
    <description>URL of the report preview image</description>
    <label>Image URL</label>
    <type>Url</type>
</CustomField>