jira_clone/force-app/main/default/objects/Report_Detail__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Project this report detail belongs to</description>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Report Details</relationshipLabel>
    <relationshipName>Report_Details</relationshipName>
    <type>Lookup</type>
</CustomField>