jira_clone/force-app/main/default/objects/Report_Detail__c/fields/Salesforce_Report__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Report__c</fullName>
    <description>Id of the referenced Salesforce report</description>
    <label>Salesforce Report</label>
    <length>18</length>
    <type>Text</type>
</CustomField>